--- a/auth/package.json
+++ b/auth/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@types/express": "^4.17.8",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "express-validator": "^6.6.1",
+    "mongoose": "^5.10.5",
     "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
   }
