--- a/auth/package.json
+++ b/auth/package.json
@@ -4,7 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --poll src/index.ts"
+    "start": "ts-node-dev --poll src/index.ts",
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -22,5 +30,13 @@
     "mongoose": "^5.10.5",
     "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.14",
+    "@types/supertest": "^2.0.10",
+    "jest": "^26.5.2",
+    "mongodb-memory-server": "^6.9.1",
+    "supertest": "^5.0.0",
+    "ts-jest": "^26.4.1"
   }
 }
