--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
     "next": "^9.5.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
