--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -16,6 +16,14 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
+    - image: wanwanzainaer/tickets
+      context: tickets
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
     - image: wanwanzainaer/client
       context: client
       docker:
