--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -32,3 +32,11 @@ build:
         manual:
           - src: '**/*.js'
             dest: .
+    - image: wanwanzainaer/orders
+      context: orders
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
